--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -36,8 +36,9 @@
         android:layout_marginTop="120dp"
         android:text="TextView"
         android:textSize="34sp"
-        app:layout_constraintTop_toBottomOf="@+id/texticoResult"
-        tools:layout_editor_absoluteX="136dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/texticoResult" />
 
     <Button
         android:id="@+id/calcBtnPlus"
