Cambio de color implementado en todas las pantallas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="83dp"
         android:layout_marginTop="156dp"
         android:text="Escribe tu nombre para continuar"
+        android:textColor="#717171"
         android:textSize="24sp"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,11 +23,14 @@
     <EditText
         android:id="@+id/nombreEdit"
         android:layout_width="216dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="132dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +39,7 @@
     <Button
         android:id="@+id/continuarBtn"
         android:layout_width="216dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="36dp"
         android:text="Continuar"
         app:layout_constraintEnd_toEndOf="parent"
