--- a/app/src/main/res/layout/activity_calculo_nota.xml
+++ b/app/src/main/res/layout/activity_calculo_nota.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bgCalc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CalculoNotaActivity">
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Cálculo de nota"
+        android:textColor="#717171"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,11 +24,14 @@
     <EditText
         android:id="@+id/notaEdit1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="64dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Proyecto Parcial 1"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,11 +40,14 @@
     <EditText
         android:id="@+id/notaEdit2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Proyecto Parcial 2"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,11 +56,14 @@
     <EditText
         android:id="@+id/notaEdit3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Quices"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,11 +72,14 @@
     <EditText
         android:id="@+id/notaEdit4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Parcial 1"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,11 +88,14 @@
     <EditText
         android:id="@+id/notaEdit5"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/textfield"
         android:ems="10"
         android:hint="Parcial 2"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#717171"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
